k8s/health-med.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-med-scheduler
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: health-med-scheduler
  template:
    metadata:
      labels:
        app: health-med-scheduler
    spec:
      containers:
        - name: health-med-scheduler
          image: "crfiappostech.azurecr.io/health-med-scheduler:latest"
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"          
---
apiVersion: v1
kind: Service
metadata:
  name: health-med-scheduler
spec: 
  selector:
    app: health-med-scheduler
  ports:
    - port: 80
      targetPort: 80      
  type: LoadBalancer
