k8s/sql-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
        - name: sql-server
          image: mcr.microsoft.com/mssql/server:l2022-latest
          ports:
            - containerPort: 1433                   
---
apiVersion: v1
kind: Service
metadata:
  name: sql-server
spec: 
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      targetPort: 1433
      port: 1433
