k8s/alo-doutor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alo-doutor
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: alo-doutor
  template:
    metadata:
      labels:
        app: alo-doutor
    spec:
      containers:
        - name: alo-doutor
          image: "fbiopereira/alo-doutor:latest"
          ports:
            - containerPort: 4040
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /live
              port: 4040
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /live
              port: 4040
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: alo-doutor
spec: 
  selector:
    app: alo-doutor
  ports:
    - port: 4040
      targetPort: 4040      
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alo-doutor  
spec:
  rules:
  - host: alo-doutor.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alo-doutor
            port: 
              number: 4040
